Phase 4 (business intelligence): workflow, audit trail, smart assignment, SLA monitor
- Controlled status workflow: domain transition graph + role matrix +
  payload rules (resolution note required) + side effects, one tx per move,
  409 with legal alternatives / 403 for forbidden actors
- Append-only audit trail: every transition + creation (null->OPEN) and
  auto-assignment write ticket_history rows in the same transaction;
  GET /api/tickets/{id}/history
- Agent skills admin API (/api/admin/agents: workloads, skill upsert/list/delete)
- Deterministic smart assignment: expertise/workload/availability scoring
  (0.50/0.30/0.20, capacity cap 10, CRITICAL/HIGH boosts at expertise>=0.6),
  category pool with all-active fallback, lower-id tie-break, explainable
  audit reason; auto-assign-on-create flag (default off)
- SLA: read-time evaluation (ON_TRACK/AT_RISK/BREACHED) in TicketResponse;
  @Scheduled monitor escalates breached tickets, idempotent via scan filter +
  per-row recheck + audit duplicate guard
- Tests: 127 total (56 new unit + 10-step HTTP lifecycle integration suite);
  live-verified on PostgreSQL (28/28 checks incl. scheduler escalation)

Co-authored-by: arena-agent <297053741+arena-agent@users.noreply.github.com>